--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,71 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+/*Varibles*/
+$content-width: 80vw;
+$sidebar-width: 20vw;
 
-$primary-color: #2fa8cc;
-$secondary-color: #f4f4f4;
-$box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: $primary-color;
-  font-family: 'Roboto', sans-serif;
+body{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
   margin: 0;
-  padding: 20px;
+  min-height: 100vh;
 }
 
-.container {
-  background-color: $secondary-color;
-  border-radius: 10px;
-  box-shadow: $box-shadow;
-  padding: 50px 20px;
-  text-align: center;
-  max-width: 100%;
-  width: 800px;
+nav{
+  background-color: red;
 }
 
-h3 {
-  color: red;
-  margin: 0;
-  opacity: 0.5;
-  letter-spacing: 2px;
+main{
+  display: flex;
+  flex-direction: row;
+  flex: 1; /*Make Sidebar and content take up rest of the height*/
 }
 
-img {
-  width: 100px;
-  margin-bottom: 20px;
+footer{
+  background-color: chartreuse;
+  margin-top: auto;
 }
 
-.joke {
-  font-size: 30px;
-  letter-spacing: 1px;
-  line-height: 40px;
-  margin: 50px auto;
-  max-width: 600px;
+#sidebar{
+  min-width: $sidebar-width; /*This and content width should equal 100vw*/
+  background-color: blue;
 }
 
-.btn {
-  background-color: $primary-color;
-  color: $secondary-color;
-  border: 0;
-  border-radius: 10px;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
-  padding: 14px 40px;
-  font-size: 16px;
-  cursor: pointer;
-
-  &:active {
-    transform: scale(0.98);
-  }
-
-  &:focus {
-    outline: 0;
-  }
+#content{
+  min-width: $content-width; /*This and sidebar width should equal 100vw*/
+  background-color: chocolate;
 }
