Moved different JS files in sub folders to seperate based on whether the file is an entity or a service file

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,9 +33,19 @@ footer{
   min-width: $content-width; /*This and sidebar width should equal 100vw*/
   background-color: chocolate;
   display: flex;
-  justify-content: center; /*Centre Horizontally*/
-  /*align-items: center;*/    /*Centre Vertically*/
+  flex-direction: column;
+  //justify-content: center; // If flex direction is set to row, justify-content centres horizotnally and align items does vertically.
+  align-items: center;       // If flex direction is set to column, the axes changes and it becomes inversed
+
 }
+#content-title{
+  background-color: aqua;
+  height: 100px;
+  width: 70vw;
+  margin-top:30px;
+
+}
+
 
 .options{
   display: flex;
@@ -51,9 +61,4 @@ footer{
 #logo{
   height: 80px;
   width: 80px;
-}
-#content-title{
-  background-color: aqua;
-  height: 100px;
-  width: 70vw;
 }
