--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,6 +67,9 @@ footer{
   margin-top:30px;
   border-radius: 10px;
 }
+#current-title{
+  padding-left: 20px;
+}
 
 
 .options{
@@ -101,9 +104,14 @@ footer{
 
 }
 #home-onclose{
-  display: none;
+  position: absolute;
+  visibility: hidden;
+  top: 100px;
+  padding-top: 20px;
 }
-
+#home-onclose:hover{
+  cursor: pointer;
+}
 #mate{
   color: $green;
   position: relative;
