--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,9 +9,6 @@ $white: white;
 
 *{
   font-family: 'Montserrat', sans-serif;
-
-
-
 }
 body{
   display: flex;
@@ -126,6 +123,19 @@ footer{
   position: relative;
   padding: 5px;
   top: 10px;
+}
+#all-task-content{
+  display: flex;
+  flex-direction: column;
+}
+
+.task-container{
+  display: flex;
+  flex-direction: column;
+  background-color: navajowhite;
+  border: 4px solid white ;
+  margin: 10px;
+  padding: 5px 30px;
 }
 
 
