Added functionality for todays task button to load todays tasks

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -124,7 +124,7 @@ footer{
   padding: 5px;
   top: 10px;
 }
-#all-task-content{
+#all-task-content,#task-container{
   display: flex;
   flex-direction: column;
 }
