Added functionality for next 7 days by adding methods to Date class, and methods in TaskLoader class

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -124,7 +124,7 @@ footer{
   padding: 5px;
   top: 10px;
 }
-#all-task-content,#task-container{
+#all-task-content,#task-container,#seven-days-content{
   display: flex;
   flex-direction: column;
 }
