--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -124,9 +124,10 @@ footer{
   padding: 5px;
   top: 10px;
 }
-#all-task-content,#task-container,#seven-days-content{
+#all-task-content,#task-container,#seven-days-content,#important-content{
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .task-container{
@@ -136,6 +137,7 @@ footer{
   border: 4px solid white ;
   margin: 10px;
   padding: 5px 30px;
+  min-width: 400px;
 }
 
 
