Users can check a task now, only frontend down, backend functionality isnt done yet

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -180,5 +180,12 @@ footer{
   margin-top: 30px;
 }
 
-
+.unchecked-circle{
+  width: 30px;
+  height: 30px;
+  align-self: end;
+}
+.unchecked-circle:hover{
+  cursor: pointer;
+}
 
