Added task editor img, with task editor class which will handle mouse hover and click events on the 3 dots img

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -188,4 +188,11 @@ footer{
 .unchecked-circle:hover{
   cursor: pointer;
 }
+.white-dots{
+  width: 30px;;
+}
+.task-img-div{
+  display: flex;
+  justify-content: space-between;
+}
 
