Edit button changes when hovering a task edit option

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -191,6 +191,9 @@ footer{
 .white-dots{
   width: 30px;;
 }
+.white-dots:hover{
+  cursor: pointer;
+}
 .task-img-div{
   display: flex;
   justify-content: space-between;
