Added input validator to edit task

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -271,7 +271,7 @@ select{
   margin-left: 10px;
 }
 
-#projectError, #taskError{
+#projectError, #taskError, #taskEditError{
   display: none;
   //visibility: hidden;
   position: relative;
